solid priciple and db transaction added
